--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
           <div class="form__row">
             <label class="form__label">Type</label>
             <select class="form__input form__input--type">
-              <option value="homes">Points of interest</option>
-              <option value="places">Friends and family</option>
+              <option class="type_option" value="point-of-interest">
+                Point of interest
+              </option>
+              <option class="type_option" value="family-and-friends">
+                Friends and family
+              </option>
             </select>
           </div>
           <div class="form__row">
@@ -47,6 +51,10 @@
           </div>
           <button class="form__btn">Add</button>
         </form>
+
+        <!-- List of pins -->
+        <h3 class="cards__title">My pin drops</h3>
+
         <!-- Form ends -->
       </sidebar>
 
